# ansible-role-python_venv_build

./: .gitreview  CONTRIBUTING.rst  README.rst  requirements.yml  setup.cfg  tox.ini
defaults/: main.yml
doc/: requirements.txt
doc/source/: conf.py
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: molecule.yml
molecule/pip_wheels/: molecule.yml
molecule/uv/: molecule.yml
releasenotes/notes/: wheel_build_enable-ea0bd0cb676128dd.yaml
releasenotes/source/: conf.py
tasks/: main.yml  python_venv_build.yml  python_venv_install.yml  python_venv_install_symlink.yml  python_venv_preflight.yml  python_venv_set_facts.yml  python_venv_wheel_build.yml
tests/: inventory  prepare.yml  test-functional.yml  test.yml  verify.yml
tests/group_vars/: all.yml  all_containers.yml  httpd.yml  no_wheels.yml  pip.yml  uv.yml  venv.yml  wheels.yml
tests/host_vars/: container1.yml  container2.yml  container3.yml  container4.yml  localhost.yml
vars/: debian.yml  main.yml  redhat-8.yml  redhat-9.yml  redhat.yml
zuul.d/: project.yaml
